fix : overflow mobile

--- a/src/components/Landing/Fifth/style.scss
+++ b/src/components/Landing/Fifth/style.scss
@@ -6,7 +6,7 @@
     background-color: v.$first-color;
     user-select: none;
     position: relative;
-    overflow-x: hidden;
+    
     @media screen and (max-width: 882px) {
         flex-direction: column;
         height: 100%;
