--- a/src/components/Landing/Fourth/style.scss
+++ b/src/components/Landing/Fourth/style.scss
@@ -7,7 +7,6 @@
     width: 100%;
     background-color: v.$third-color;
     user-select: none;
-    overflow-x: hidden;
 
     &_text {
         display: flex;
