--- a/src/components/Landing/Third/style.scss
+++ b/src/components/Landing/Third/style.scss
@@ -4,9 +4,9 @@
     display: flex;
     height: 100%;
     background-color: v.$second-color;
-    overflow-x: hidden;
     user-select: none;
     position: relative;
+    
     @media screen and (max-width: 882px) {
         flex-direction: column;
         height: 100%;
