--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,14 +6,12 @@ body {
     margin: 0;
     box-sizing: border-box;
     font-family: 'Inter';
-    overflow-x: hidden;
-}
-
-#root {
-    overflow: hidden;
 }
 
 ::selection {
     background-color: v.$first-color;
 }
 
+#root {
+    overflow: hidden;
+}
